# pyObscuraProto

./: CHANGELOG.md  CMakeLists.txt  README.md  README.ru.md  pyproject.toml  setup.py
.github/workflows/: autotests.yml  pypi_publish.yml
examples/: python_websocket_example.py  streaming_example.py
examples/request_response_example/: server_example.py
src/ObscuraProto/: __init__.py  bindings.cpp
src/pyObscuraProto/: bindings.cpp
tests/: test_auth_anonymous.py  test_auto_unpacking.py  test_bindings.py  test_opcode_callbacks.py  test_session.py  test_streaming.py  test_websocket_session.py
