[build-system]
requires = ["setuptools", "cmake>=3.14", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp313-* cp314-*"
skip = "*-win32"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = "yum install -y libsodium-devel"

[tool.cibuildwheel.macos]
before-all = "brew install libsodium"

[tool.cibuildwheel.windows]
before-all = """
git clone --depth=1 https://github.com/Microsoft/vcpkg.git vcpkg
.\\vcpkg\\bootstrap-vcpkg.bat
.\\vcpkg\\vcpkg install libsodium --triplet x64-windows
"""
environment = { CMAKE_TOOLCHAIN_FILE = "{project}\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake" }

[tool.setuptools_scm]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999", "N801", "N813"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["src", "tests", "examples"]
exclude = ["build", "**/__pycache__"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "warning"
reportAttributeAccessIssue = "warning"
reportInvalidTypeForm = "warning"
